--- a/html/index.html
+++ b/html/index.html
@@ -13,7 +13,7 @@
   <div class="board">
     <div class="deal">
       <div class="draw-pile mark">Deal draw pile</div>
-      <div class="discard-pile mark">Deal discard pile</div>
+      <div class="discard-pile mark">Start Dealing</div>
     </div>
     <div class="aces">
       <div class="clubs mark">Aces clubs</div>
@@ -22,13 +22,13 @@
       <div class="spades mark">Aces spades</div>
     </div>
     <div class="spots">
-      <div class="spot-1 mark">Spot</div>
-      <div class="spot-2 mark">Spot</div>
-      <div class="spot-3 mark">Spot</div>
-      <div class="spot-4 mark">Spot</div>
-      <div class="spot-5 mark">Spot</div>
-      <div class="spot-6 mark">Spot</div>
-      <div class="spot-7 mark">Spot</div>
+      <div id="spot1"class="spot mark">Spot</div>
+      <div id="spot2"class="spot mark">Spot</div>
+      <div id="spot3"class="spot mark">Spot</div>
+      <div id="spot4"class="spot mark">Spot</div>
+      <div id="spot5"class="spot mark">Spot</div>
+      <div id="spot6"class="spot mark">Spot</div>
+      <div id="spot7"class="spot mark">Spot</div>
     </div>
   </div>
 
