Aces go straight to its place

--- a/html/index.html
+++ b/html/index.html
@@ -12,14 +12,16 @@
 
   <div class="board">
     <div class="deal">
-      <div class="draw-pile mark">Deal draw pile</div>
-      <div class="discard-pile mark">Start Dealing</div>
+      <div class="draw-pile mark"><img src="../images/cardBack.png"></div>
+      <div class="discard-pile mark"><img src=""></div>
+      <div class="discard-pile mark"><img src=""></div>
+      <div class="discard-pile mark"><img src=""></div>
     </div>
     <div class="aces">
-      <div class="clubs mark">Aces clubs</div>
-      <div class="diamonds mark">Aces diamonds</div>
-      <div class="hearts mark">Aces hearts</div>
-      <div class="spades mark">Aces spades</div>
+      <div id="spades" class="ace mark"><img src=""></div>
+      <div id="hearts" class="ace mark"><img src=""></div>
+      <div id="diamonds" class="ace mark"><img src=""></div>
+      <div id="clubs" class="ace mark"><img src=""></div>
     </div>
     <div class="spots">
       <div id="spot1" class="spot mark">Spot</div>
