--- a/html/index.html
+++ b/html/index.html
@@ -5,6 +5,10 @@
   <link rel="stylesheet" type="text/css" href="../css/styles.css">
   <script src="../js/application.js"></script>
   <script src="../js/game.js"></script>
+
+  <!-- Script to drag elements -->
+  <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
   <title>Solitaire</title>
 </head>
 <body>
@@ -32,7 +36,8 @@
       <div id="spot5" class="spot mark">Spot</div>
       <div id="spot6" class="spot mark">Spot</div>
     </div>
-  </div>
 
+  </div>
+  <h1>Drag a Card!!!</h1>
 </body>
 </html>
