Add id for the backcard

--- a/html/index.html
+++ b/html/index.html
@@ -16,7 +16,7 @@
 
   <div class="board">
     <div class="deal">
-      <div class="draw-pile mark"><img src="../images/cardBack.png"></div>
+      <div class="draw-pile mark"><img id="backcard" src="../images/cardBack.png"></div>
       <div class="discard-pile mark"><img src=""></div>
       <div class="discard-pile mark"><img src=""></div>
       <div class="discard-pile mark"><img src=""></div>
